# tunapanel

./: Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs
src/: errors.rs  footer.html  lib.rs  macros.rs  panel.rs  server.rs  widget.rs
src/templates/: button.html  checkbox.html  footer.html  header.html  mod.rs  text_box.html
